[gd_scene load_steps=5 format=2]

[ext_resource path="res://ReusableUI/EquipmentPane/EquipmentPane.gd" type="Script" id=1]
[ext_resource path="res://ReusableUI/EquipmentLock/EquipmentLock.tscn" type="PackedScene" id=2]
[ext_resource path="res://ReusableUI/Bar/Bar.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assetts3.0/OtherUI/Equinox24pt.tres" type="DynamicFont" id=4]

[node name="EquipmentPane" type="Panel"]
anchor_right = 0.217
anchor_bottom = 0.444
margin_right = -0.640015
margin_bottom = 0.47995
rect_min_size = Vector2( 0, 480 )
rect_pivot_offset = Vector2( 56, 272 )
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PaperDoll" type="Panel" parent="."]
margin_left = 24.0
margin_top = 40.0
margin_right = 392.0
margin_bottom = 408.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Equip1" parent="PaperDoll" instance=ExtResource( 2 )]
margin_left = -16.0
margin_top = 264.0
margin_right = 58.336
margin_bottom = 338.36

[node name="Equip2" parent="PaperDoll" instance=ExtResource( 2 )]
margin_left = 136.0
margin_top = 264.0
margin_right = 210.336
margin_bottom = 338.36
lockSlot = 1

[node name="Equip3" parent="PaperDoll" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 288.0
margin_top = 264.0
margin_right = 380.0
margin_bottom = 377.0
lockSlot = 2

[node name="Weapon2" parent="PaperDoll" instance=ExtResource( 2 )]
margin_left = 232.0
margin_top = 16.0
margin_right = 306.336
margin_bottom = 90.36
lockType = 0
lockSlot = 1

[node name="Weapon1" parent="PaperDoll" instance=ExtResource( 2 )]
anchor_top = 0.065
anchor_right = 0.0
margin_left = -16.0
margin_top = -15.92
margin_right = 76.0
margin_bottom = 82.36
lockType = 0

[node name="Armor" parent="PaperDoll" instance=ExtResource( 2 )]
margin_left = 136.0
margin_top = 80.0
margin_right = 210.336
margin_bottom = 154.36
lockType = 1

[node name="CarryLabel" type="Label" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = -32.0
margin_right = 106.0
margin_bottom = -19.0
mouse_filter = 0
text = "CARRY WEIGHT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CharName" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 0.083
margin_right = 3.05176e-05
margin_bottom = 0.16
rect_min_size = Vector2( 0, 40 )
mouse_filter = 0
custom_fonts/font = ExtResource( 4 )
text = "CHARACTER NAME"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CarryBar" parent="." instance=ExtResource( 3 )]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -304.0
margin_top = -40.0
margin_right = -12.4
margin_bottom = -14.08
barType = 1
[connection signal="focus_entered" from="." to="." method="_on_EquipmentPane_focus_entered"]
[connection signal="userCancelled" from="PaperDoll/Equip1" to="." method="_on_userCancelled"]
[connection signal="userEquippedItem" from="PaperDoll/Equip1" to="." method="_on_itemEquipped"]
[connection signal="userUnequippedItem" from="PaperDoll/Equip1" to="." method="_on_itemUnEquipped"]
[connection signal="userCancelled" from="PaperDoll/Equip2" to="." method="_on_userCancelled"]
[connection signal="userEquippedItem" from="PaperDoll/Equip2" to="." method="_on_itemEquipped"]
[connection signal="userUnequippedItem" from="PaperDoll/Equip2" to="." method="_on_itemUnEquipped"]
[connection signal="userCancelled" from="PaperDoll/Equip3" to="." method="_on_userCancelled"]
[connection signal="userEquippedItem" from="PaperDoll/Equip3" to="." method="_on_itemEquipped"]
[connection signal="userUnequippedItem" from="PaperDoll/Equip3" to="." method="_on_itemUnEquipped"]
[connection signal="userCancelled" from="PaperDoll/Weapon2" to="." method="_on_userCancelled"]
[connection signal="userEquippedItem" from="PaperDoll/Weapon2" to="." method="_on_itemEquipped"]
[connection signal="userUnequippedItem" from="PaperDoll/Weapon2" to="." method="_on_itemUnEquipped"]
[connection signal="userCancelled" from="PaperDoll/Weapon1" to="." method="_on_userCancelled"]
[connection signal="userEquippedItem" from="PaperDoll/Weapon1" to="." method="_on_itemEquipped"]
[connection signal="userUnequippedItem" from="PaperDoll/Weapon1" to="." method="_on_itemUnEquipped"]
[connection signal="userCancelled" from="PaperDoll/Armor" to="." method="_on_userCancelled"]
[connection signal="userEquippedItem" from="PaperDoll/Armor" to="." method="_on_itemEquipped"]
[connection signal="userUnequippedItem" from="PaperDoll/Armor" to="." method="_on_itemUnEquipped"]
